KAlarm Change Log

=== Version 3.5.4 (KDE Gear 22.12.1) --- 11 December 2022 ===
* Update date picker display when a resource becomes disabled.

=== Version 3.5.3 (KDE Gear 22.12) --- 18 November 2022 ===
* Provide build option to disable use of X11, even if it is available.
* Fix daily alarms continually triggering just before end of daylight savings time [KDE Bug 461713]

=== Version 3.5.2 (KDE Gear 22.08.2) --- 4 October 2022 ===
* Fix possible crash when alarm restored at login is deferred [KDE Bug 459901]

=== Version 3.5.1 (KDE Gear 22.08.1) --- 15 August 2022 ===
* Fix regression introduced in version 3.5.0:
    In some locales, displayed times were wrongly formatted.

=== Version 3.5.0 (KDE Gear 22.08) --- 19 July 2022 ===
* Provide options to build and/or run KAlarm without any Akonadi dependency.
* Set volume correctly for repeated audio alarms [KDE Bug 456845]

=== Version 3.4.1 (KDE Gear 22.04.1) --- 2 May 2022 ===
* Fix checkboxes being disabled in Preferences dialogue.
* Fix time spin boxes being displayed in the wrong position.
* Fix crash when Try clicked to stop audio alarm with fade [KDE Bug 452962]
* Don't show volume fade controls if Phonon backend doesn't support fade.
* Fix sound files not playing after previously playing with fade.
* Fix Stop Play button not working for display alarm with audio file.
* Fix crash in font chooser when style is selected after deselecting default font [KDE Bug 453193]

=== Version 3.4.0 (KDE Gear 22.04) --- 6 April 2022 ===
* Allow calendars and date picker to be shown together in side panel [KDE Bug 440250]
* Shrink calendar list to remove empty space when too large.
* When a resource is re-enabled, ensure its alarms are displayed.
* When default resources are created on first run, set them as standard (default) calendars.
* Cancel sound file playback if audio alarm edit dialogue is closed after clicking Try.
* Remove all 'speak' functions if KAlarm is built with text-to-speech disabled.